testsuite/tests/th/T12788.stderr

T12788.hs:9:14: error: [GHC-20825] Empty record update
